# seek_frequently_traders_from_HL

./: .gitignore  ARCHITECTURE.md  PROJECT_SUMMARY.md  README.md  USAGE_EXAMPLES.md  main.py  pyproject.toml
utils/: average_holding_time.py  blacklist.txt  config.py  short_holding_time_and_high_frequency.py
