[project]
name = "seek-frequently-traders-from-hl"
version = "0.1.0"
description = "A Python tool for identifying high-frequency traders from Hyperliquid platform by analyzing trading patterns and holding times"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "retry>=0.9.2",
]
